--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.ZIschool.ljalikak</groupId>
+    <groupId>ru.zl.school.ljalikak</groupId>
     <artifactId>swingy</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
@@ -12,7 +12,7 @@
     <description>Java Swing GUI.</description>
 
     <properties>
-        <main.class>ru.ZIschool.ljalikak.Main</main.class>
+        <main.class>ru.zl.school.ljalikak.Main</main.class>
         <source.version>1.8</source.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
