--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     </dependencies>
 
     <build>
+        <finalName>swingy</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
